--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-logging.level.ru.yandex.practicum.catsgram.controller.PostController=debug 
-logging.level.org.springframework.web.servlet.DispatcherServlet=debug 
+logging.level.ru.yandex.practicum.filmorate.controller.PostController=trace
+logging.level.org.springframework.web.servlet.DispatcherServlet=trace
 
 spring.sql.init.mode=always
 spring.datasource.url=jdbc:h2:file:./db/filmorate
